src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_personalities__snapshot_orchestrator_ascii.snap
---
source: src/tui/snapshot_tests/agent_personalities.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                         [IMP] #539       [ORC] | #539                        │"
"│                             ██               ██                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
