src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_personalities__snapshot_orchestrator_nerd_font.snap
---
source: src/tui/snapshot_tests/agent_personalities.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                            ██               ◆██◆                             │"
"│                           ████             ██████                            │"
"│                          █●██●█            █●██●█                            │"
"│                                                                              │"
"│                          ██████            ██████                            │"
"│                          ██████            ██████                            │"
"│                          █ ██ █            █ ██ █                            │"
"│                             #539              ⠋ #539                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
